Angularjs 쿠키 모듈 설정 및 버전 1.6 업데이트

--- a/public/stylesheets/appstyle.css
+++ b/public/stylesheets/appstyle.css
@@ -21,7 +21,17 @@ header h1 {
 
 .index-username h2 {
     color: #CCC;
+    font-weight: bold;
 }
+
+.index-username-input{
+    display: inline-block;
+    margin: auto 16px;
+    vertical-align: middle;
+    text-align: center;
+    width: 150px;
+}
+
 
 .index-list-box{
     background-color: white;
