--- a/public/stylesheets/appstyle.css
+++ b/public/stylesheets/appstyle.css
@@ -129,6 +129,58 @@ header h1 {
     max-width: 240px;
 }
 
+/* room-game */
+.game-player{
+    text-align: center;
+    color: aliceblue;
+}
+.game-wrapper{
+    position: relative;
+    max-width: 480px;
+    max-height: 480px;
+    margin: auto;
+}
+.game-wrapper:before{
+    content: "";
+    display: block;
+    padding-top: 100%;  /* ratio of 1:1*/
+}
+.game-circle{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-bottom: 100%;
+    border-radius: 50%;
+    background-color: aliceblue;
+}
+.game-circle-stop{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: crimson;
+    border-radius: 50%;
+    width: 20%;
+    height: 20%;
+    
+}
+.game-time{
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    height: 84px;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+.game-time span{
+    font-size: 84px;
+    line-height: 84px;
+    margin: 0;
+}
+
 /* Media Query*/
 @media all and (min-width: 768px) and (max-width: 1920px){
     .only-mobile{
